# synapsemcp

./: .gitignore  COMMIT_MESSAGE.txt  README.md  base.py  config.dev.json  config.prod.json  config.py  config.test.json  duckdb_db.py  example_tools.py  main.py  mariadb.py  mcp_instance.py  pyproject.toml  requirements.txt  server.py  test_database.py  utils.py
backups/: sqlite_db.backup  utils.py.backup
config/: config.dev.mariadb.json  mcp.json
data/: synapse.duckdb
docs/: ARCHITECTURE.md  guidelines.md  mac-linux-setup-guide.md  mcp-json-configuration-guide.md  project-name-synapse.md  setup-after-clone-guide.md  synapse_instructions.py  tasks.md  tools-reference.md  windows-setup-guide.md
guides/: benefits.py  setup.py  structure.py  usage.py
scripts/: cleanup_remaining_files.py  final_cleanup.py  migrate_to_new_structure.py  move_database_files.py
servers/: __init__.py  config_server.py  document_server.py  guide_server.py  memory_server.py  synapse.config_server.py  synapse.guide_server.py  template_server.py
src/synapse/: __init__.py  __version__.py
src/synapse/cli/: main.py.backup
src/synapse/core/: __init__.py  config.py  constants.py  exceptions.py
src/synapse/database/: __init__.py  duckdb_impl.py  mariadb_impl.py  mariadb_server_manager.py  models.py  sqlite_impl.py
src/synapse/mcp/: __init__.py  instance.py  instance.py.backup
src/synapse/mcp/tools/: __init__.py  (+2 more)
src/synapse/services/: __init__.py  config_server.py  document_server.py  memory_server.py  template_server.py
src/synapse/utils/: __init__.py  helpers.py  helpers.py.backup
src/synapse/web/: server.py
startup_scripts/: synapse-dev.bat  synapse-dev.ps1  synapse-dev.sh
synapse.template/: structure.py
tests/: test_sqlite_db.archived.py
tests/unit/: test_database.py  test_import.py
tools/: advanced_tools.py
